syntax = "proto3";

package helloworld;

option java_package = "ind.sq.study.grpc";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string firstName = 1;
    string lastName = 2;
}


message HelloReply {
    string message = 1;
    int32 age = 2;
    string memo = 3;
}
